--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Woc30androidmidevaluationDevesh_Modi">
-        <activity android:name=".myMonday"></activity>
+        <activity android:name=".myTuesday"></activity>
+        <activity android:name=".myMonday" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
